--- a/Assignment3/views/home.html
+++ b/Assignment3/views/home.html
@@ -38,8 +38,8 @@
                     <p>This site consists of 3 static views (Home, About, HTML Demo) as well as 5 routes that supply data, including:</p>
                     <ul>
                         <li><a href="/students">All Students</a></li>
-                        <li><a href="/courses?2">Students by Course</a></li>
-                        <li><a href="/students/2">A Single Student By Student Number</a></li>
+                        <li><a href="/students?course=3">Students by Course</a></li>
+                        <li><a href="/students/:1">A Single Student By Student Number</a></li>
                         <li><a href="/tas">All Managers</a></li>
                         <li><a href="/courses">All Courses</a></li>
                     </ul>
