--- a/Assignment3/views/htmlDemo.html
+++ b/Assignment3/views/htmlDemo.html
@@ -134,8 +134,8 @@
 					<section>
 						<h2>Images</h2>
 						<img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Snowboarder_in_halfpipe.jpg" alt="Snowboarder in halfpipe" width="300">
-						<img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Red_Fox_in_Snow.jpg" alt="Red Fox in Snow" width="300">
-						<img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Golden_Gate_Bridge.jpg" alt="Golden Gate Bridge" width="300">
+						<img src="https://wallup.net/wp-content/uploads/2019/09/945305-autumn-fall-season-nature-landscape-leaf-leaves-color-seasons-tree-forest.jpg" alt="Fall colors" width="300">
+						<img src="https://th.bing.com/th/id/R.ff48a83252fffe64b35fc2ab3c3e6073?rik=69yMTKUKBhWTFg&riu=http%3a%2f%2fwallup.net%2fwp-content%2fuploads%2f2016%2f01%2f262485-animals-nature-fox-wildlife-snow.jpg&ehk=dR38a3tJ1JeIq%2bqJyAKFEpz9y8kxD316njMZCDWb930%3d&risl=&pid=ImgRaw&r=0" alt="Fox in snow" width="300">
 						<p>This section features a collection of images, showcasing various subjects while ensuring each image has descriptive alt text for accessibility.</p>
 					</section>
 			
