--- a/Assignment5/views/student.ejs
+++ b/Assignment5/views/student.ejs
@@ -1,10 +1,23 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>WEB700</title>
+		<meta charset="UTF-8" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="/css/theme.css" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap" rel="stylesheet">
+    </head>
+<body>
+<div class="container">
 <div class="row">
     <main class="col-md-12">
         <br>
         <h2><%= student.firstName %> <%= student.lastName %> - Student: <%= student.studentNum %></h2>
         <hr />
 
-        <form method="post" action="/student/update">
+        <form method="POST" action="/student/update">
             <input type="hidden" name="studentNum" value="<%= student.studentNum %>" />
 
             <fieldset>
@@ -85,3 +98,6 @@
         </form>
     </main>
 </div>
+</div>
+</body>
+</html>
